// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorToast renders correctly 1`] = `
<div
  id="sgErrorToast"
>
  nasty!
</div>
`;

exports[`ErrorToast renders correctly if custom message and details 1`] = `
<div
  id="sgErrorToast"
>
  <EuiText
    size="s"
  >
    <p>
      Super nasty!!!
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFlexGroup
    justifyContent="flexEnd"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        color="danger"
        onClick={[Function]}
        size="s"
      >
        Details
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`ErrorToast renders correctly if details cannot be parsed 1`] = `
<div
  id="sgErrorToast"
>
  nasty!
</div>
`;

exports[`ErrorToast renders details correctly 1`] = `
<div
  id="sgErrorToast"
>
  <EuiText
    size="s"
  >
    <p>
      nasty!
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiFlexGroup
    justifyContent="flexEnd"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        color="danger"
        onClick={[Function]}
        size="s"
      >
        Details
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
